package br.unitins.topicos1.dto;

public record TelefoneDTO(
    String codigoArea,
    String numero
) {
   
}
