@startuml Modelagem

class Usuario {
       - id: Long
       - nome: String
       - email: String
       - senha: String
       - cpf: String
       - isAdmin: Boolean
    }

    class Album {
    - anoLancamento: String
    }

    class Gravadora{
        - nome: String
    }

    class Artista{
        - nome: String
        - descricao: String
    }

    class Genero{
        - nome: String
    }
    
    enum TipoProduto{
        CD
        DVD
        VINIL
        FITA_CASSETE

    }
    class Produto {
        - nome: String
        - descricao: String
        - preco: Double
        - estoque: Integer
    }

    class Venda {
    - id: Long
    - dataCompra: LocalDate
    - totalCompra: Double
    - isFinalizada: Boolean
    }

    class ItemVenda{
        id: Long 
        precoUnitario: Double
        quantidade: Interger
    }

     class Telefone {
        - codigoArea: String
        - numero: String
    }

    class Endereco {
        - id: Long
        - logradouro: String
        - bairro: String
        - numero: String
        - complemento: String
        - cep: String
    }

    abstract class Pagamento {

        - id: Long
        - isPago: Boolean
        - dataConfirmacaoPagamento: LocalDate
        - valor: Double
    }
    
    class Boleto {

        - nome: String
        - cpf: String
        - dataDoBoleto: LocalDate
        - dataVencimento: LocalDateDate
    }

    class Pix {

        - nome: String
        - cpf: String
        - dataVencimento: LocalDateTime
    }

    class CartaoCredito {
        - numeroCartao: String
        - nomeCartao: String
        - cvv: String
        - cpf: String
    }

    TipoProduto "1" --> "*" Produto

    Venda "1" o--> "1" Endereco


    Venda "1" *--> "*" ItemVenda

    Album --|> Produto

    Venda "*" --> "1" Usuario

    ItemVenda "*" --> "1" Produto

    Usuario "*" *--> "1" Endereco

    Usuario "1" --> "*" Telefone
    
    Album "1" --> "1" Artista

    Album "1" --> "*" Genero

    Album "1" --> "1" Gravadora

    Venda "1" --> "1" Usuario

    Venda "1" --> "1" Pagamento

    Pagamento <|-- Boleto
    Pagamento <|-- Pix
    Pagamento <|-- CartaoCredito

    Venda "1" --> "1" Usuario
    







    

@enduml